[package]
name = "govind-frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
# The Dioxus Cross-Platform Framework
dioxus = { version = "0.7.9", features = ["web", "router"] }
dioxus-logger = "0.7"

# Cryptography (Runs locally on Device)
ed25519-dalek = { version = "2.1", features = ["rand_core", "zeroize"] }
aes-gcm = "0.10"
rsa = { version = "0.9", features = ["sha2", "getrandom"] }
argon2 = "0.5"
hmac = "0.12"
ml-kem = "0.2"
fips204 = "0.4.6"
hex = "0.4"
rand_core = { version = "0.6", features = ["getrandom"] }
ark-groth16 = { version = "0.6.0", default-features = false }
getrandom = { version = "0.4.2", features = ["wasm_js"] }
getrandom_0_2 = { package = "getrandom", version = "0.2", features = ["js"] }
sha2 = "0.11"
zeroize = { version = "1.7", features = ["derive"] }
rand = "0.10"

# The Messenger & Data Handling
reqwest = { version = "0.13", features = ["json", "multipart"] }
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
tracing = "0.1"

# WebAssembly & Interop
gloo-timers = { version = "0.4", features = ["futures"] }
gloo-net = { version = "0.7.0", features = ["websocket"] }
futures = "0.3.32"
gloo-storage = "0.4.0"
serde_json = "1.0.149"
wasm-bindgen = "0.2.118"
wasm-bindgen-futures = "0.4.68"
js-sys = "0.3.95"
infer = "0.16"
image = "0.24"
kamadak-exif = "0.5"

[dependencies.web-sys]
version = "0.3" # (Keep whatever version number you already have here)
features = [
    "Window",
    "Document",
    "Element",
    "HtmlElement",
    "HtmlVideoElement",
    "Navigator",
    "MediaDevices",
    "MediaStreamConstraints",
    "MediaStream",
    "MediaStreamTrack",
    "RtcPeerConnection",
    "RtcConfiguration",
    "RtcSessionDescription",
    "RtcSessionDescriptionInit",
    "RtcSdpType",
    "RtcTrackEvent"
]
